# architecture-labs

./: README.md
lab1/: README.md  workspace.dsl
lab2/: docker-compose.yml  test.py
lab2/project_service/: Dockerfile  README.md  app.py  projects_schemas.py  pyproject.toml
lab2/project_service/src/: app.py  crud.py  database.py  schemas.py
lab2/user_service/: Dockerfile  README.md  app.py  pyproject.toml  schemas.py
lab2/user_service/src/: auth.py  config.py  crud.py  database.py  main.py  schemas.py
