[project]
name = "project-service"
version = "0.1.0"
description = "Сервис для проектов"
authors = [
    {name = "KiriruZaytsev",email = "kirillwestcoast@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
